--- a/QuickFoodDelivery/src/Core/QuickFoodDelivery.Application/QuickFoodDelivery.Application.csproj
+++ b/QuickFoodDelivery/src/Core/QuickFoodDelivery.Application/QuickFoodDelivery.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\QuickFoodDelivery.Domain\QuickFoodDelivery.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Abstractions\Services\" />
+  </ItemGroup>
+
 </Project>
