--- a/QuickFoodDelivery/src/Core/QuickFoodDelivery.Domain/QuickFoodDelivery.Domain.csproj
+++ b/QuickFoodDelivery/src/Core/QuickFoodDelivery.Domain/QuickFoodDelivery.Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.25" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Enums\" />
+  </ItemGroup>
+
 </Project>
