Restaurant crud was impruved

--- a/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/QuickFoodDelivery.Mvc.csproj
+++ b/QuickFoodDelivery/Presentation/QuickFoodDelivery.Mvc/QuickFoodDelivery.Mvc.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\assets\img\restauratImages\" />
+    <Folder Include="wwwroot\assets\img\restaurantImages\" />
   </ItemGroup>
 
 </Project>
